segundo commit del pibe, next atr

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,3 +76,19 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+/* TESTEO FUENTES NUEVAS PEPITAH */
+
+@font-face {
+  font-family: 'TAN Harmoni';
+  src: url('/fonts/Harmoni.ttf') format('.ttf'); /* Cambia a .ttf si usas ese formato */
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'TAN Harmoni';
+  src: url('/fonts/Harmoni.ttf') format('.ttf'); /* Cambia a .ttf si usas ese formato */
+  font-weight: bold;
+  font-style: normal;
+}
